#320: Modified security checks for GetCustomer, GetVendor and GetParty UCs